# pequod

./: .gitignore  main.py  params.toml  pyproject.toml
.github/workflows/: ci.yaml
src/: utils.py
src/pequod/: __init__.py  grid.py  gulf.py  pq_types.py
src/pequod/solvers/: adr.py  burgers.py  solver.py  transport.py
src/pypq/: cabaret.py  grid.py  main.py  pq_types.py
src/pypq/solvers/: scalar_transport.py  solver.py
tests/transport/: conftest.py  test_solver.py  transport_cases.py
