[project]
name = "pequod"
version = "1.0.dev0"
description = "Python PEQUOD - pypq - is the python components of the PEQUOD source code."
readme = "README.md"
authors = [
    { name = "Jo Wayne Tan", email = "jo.tan17@imperial.ac.uk" },
    { name = "Pavel Berloff", email = "p.berloff@imperial.ac.uk" },
]

# Prerequisites
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pyinstrument>=5.0.3",
    "pytest>=8.4.1",
    "pytest-cases>=3.9.1",
    "matplotlib>=3.10.5",
    "pytest-cov>=6.2.1",
]
